--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-
-
-body {
+html,body {
   background-color: rgb(217, 218, 219);
   font-family: Arial, sans-serif;
-  
+ 
+  width: 100%;
+  overflow-x: hidden;
 }
+
 
 * {
   margin: 0;
   padding: 0;
- 
+
 }
 
 
@@ -20,10 +21,10 @@ body {
   top: 0;
   left: 0;
   right: 0px;
-  gap: 30rem;
-  z-index: 1000;
+  gap: 10rem;
+
   background-color: #fff;
-  width: 100%;
+
   height: 80px;
 
   align-items: center;
@@ -32,7 +33,7 @@ body {
 
 .c {
   display: flex;
-
+  gap: 2rem
 }
 
 .c img {
@@ -41,19 +42,11 @@ body {
 }
 
 .inp {
-  /* padding-left: 8rem;
-  border: none;
-  height: 45px;
-  width: 550px;
-  border-radius: 8px;
 
-  outline: none;
-  font-size: 24px;
-  background-color: rgb(242, 247, 245); */
   flex: 1;
-  /* responsive width */
+
   max-width: 550px;
-  /* don’t exceed desktop size */
+
   height: 45px;
   border: none;
   border-radius: 8px;
@@ -85,7 +78,7 @@ body {
   align-items: center;
 
 
-  /* margin-left: 25%; */
+
 }
 
 
@@ -439,6 +432,33 @@ body {
 
 }
 
+@media (max-width: 1150px) {
+
+
+
+  .container {
+    gap: 12rem;
+    padding: 0 1rem;
+ 
+  }
+
+  .inp {
+    max-width: 350px;
+    font-size: 19px;
+  }
+
+
+
+}
+
+
+@media (max-width: 930px) {
+  .layout1 {
+    flex-direction: column;
+    height: auto
+  }
+}
+
 /* Mobile */
 @media (max-width: 768px) {
   .container {
@@ -448,18 +468,21 @@ body {
     padding: 1rem;
     gap: 12rem;
   }
-  .c img{
+
+  .c img {
 
     height: 90px;
     width: auto;
   }
-  .search-wrapper i , input{
+
+  .search-wrapper i,
+  input {
     font-size: 3rem;
   }
 
   .inp {
     width: 100%;
-  
+
   }
 
   .cart span,
@@ -469,7 +492,8 @@ body {
     display: none;
 
   }
-  .p{
+
+  .p {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem;
@@ -481,16 +505,10 @@ body {
   .dote i {
 
     font-size: 3rem;
-   
-   
+
+
 
   }
 }
 
 
-@media (max-width: 930px) {
-  .layout1 {
-    flex-direction: column;
-    height: auto
-  }
-}
