--- a/style.css
+++ b/style.css
@@ -472,13 +472,13 @@ body {
 
   .c img {
 
-    height: 90px;
+    height70x;
     width: auto;
   }
 
   .search-wrapper i,
   input {
-    font-size: 3rem;
+    font-size:2rem;
   }
 
   .inp {
@@ -505,7 +505,7 @@ body {
   .login i,
   .dote i {
 
-    font-size: 3rem;
+    font-size:2rem;
 
   }
 
@@ -523,14 +523,30 @@ body {
 
 
 
-  }     
+  }    
+  
+  .para-layout{
 
-  .main-layout2{
+   grid-template-columns: 1fr;
+   justify-content: center;
+   align-items: center;
+   height:auto;
+  
+  }
+
+  .p2{
+  grid-column: 1 / 3;
+  grid-row: ;
+}
+
+    .main-layout2{
    grid-template-columns: 1fr;
    justify-content: center;
    align-items: center;
    height:auto;
   }
+
+  .main-image
 
   .main-footer{
     grid-template-columns: 1fr;
@@ -539,5 +555,13 @@ body {
     height:auto;
   }
 
+  }
+
+
   
-}
+    
+  
+
+  
+  
+  
